<resources>

    <!-- =========================================================================
        More words than you expect already exist herein,
        please check before adding new ones, please try to respect
        the following classification as well

        - PolyBooks         __
        - Sale              please begin name by "sale_"
        - Book              please begin name by "book_"
        - User              please begin name by "user_"
        - Login             __
        - User Interaction  __
        - Toasts            __
        - Adverbs/Preps     typically small words often used (such as "and", "in")
        - Others            words you don't know where to put
        - Debug/Temp        put here the words that are not meant to last

    =============================================================================== -->

    <!-- PolyBooks -->
    <string name="app_name">PolyBooks</string>
    <string name="polybooks">PolyBooks</string>

    <!-- Sales -->
    <string name="sale_book">Book</string>
    <string name="sale_price">Price</string>
    <string name="sale_publication_date">Date</string>

    <string name="sale_book_condition">Condition</string>
    <string-array name="sale_book_conditions_array">
        <item>New</item>
        <item>Good</item>
        <item>Worn</item>
    </string-array>

    <string name="sale_state">State</string>
    <string-array name="sale_states_array">
        <item>Active</item>
        <item>Retracted</item>
        <item>Concluded</item>
    </string-array>

    <string name="sale_ordering">Ordering</string>
    <string-array name="sale_orderings_array">
        <item>Default</item>
        <item>Title (ascending)</item>
        <item>Title (descending)</item>
        <item>Price (ascending)</item>
        <item>Price (descending)</item>
        <item>Publish date (ascending)</item>
        <item>Publish date (descending)</item>
    </string-array>

    <!-- Books -->
    <string name="book_isbn">ISBN</string>
    <string name="book_ordering">Ordering</string>
    <string-array name="book_orderings_array">
        <item>Default</item>
        <item>Title (ascending)</item>
        <item>Title (descending)</item>
    </string-array>

    <!-- Interests -->
    <string name="interest_field">Field</string>
    <string name="interest_course">Course</string>
    <string name="interest_semester">Semester</string>

    <!-- User -->
    <string name="user_picture">user_picture</string>

    <!-- Login -->
    <string name="address_mail">Address mail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_1">Password (1)</string>
    <string name="password_2">Password (2)</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_in_using_tequila">Log In using Tequila</string>
    <string name="sign_up_using_google_account">Sign Up using Google account</string>
    <string name="disconnect">Disconnect</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- User Interaction (could be further organized) -->
    <string name="user_edit_interests">Your interests</string>
    <string name="sort_by">Sort by</string>
    <string name="take_picture">Take Picture</string>
    <string name="scan_book">Scan Book Barcode</string>
    <string name="confirm_sale">Confirm Sale</string>
    <string name="sell_a_book">Sell a book</string>
    <string name="reset">Reset</string>
    <string name="results">Results</string>
    <string name="enter_book_name">Enter book name</string>
    <string name="enter_book_isbn">Enter book ISBN</string>
    <string name="input_isbn">Input Book ISBN</string>
    <string name="enter_min_price">min   </string>
    <string name="enter_max_price">max   </string>
    <string name="sell">Sell</string>
    <string name="view_all_books">View all books</string>
    <string name="filter">Filter</string>
    <string name="search">SEARCH</string>
    <string name="uid">UID</string>
    <string name="locate_a_user">Locate a user</string>

    <!-- Toasts -->
    <string name="error">An error occurred, please try again</string>
    <string name="permissions_not_granted">You must grant camera permissions to take a picture.</string>
    <string name="binding_failed">Use case binding failed</string>
    <string name="no_ISBN_match">Book matching the ISBN could not be found</string>
    <string name="missing_ISBN">Please provide an ISBN</string>


    <!-- Adverbs/Prepositions-->
    <string name="or">Or</string>
    <string name="in">in</string>
    <string name="by">by</string>

    <!-- Others -->
    <string name="home">home</string>
    <string name="books">books</string>
    <string name="sale">sales</string>
    <string name="profile">profile</string>
    <string name="my_book_sales">My book sales</string>
    <string name="title">Title:</string>
    <string name="edition">Edition:</string>
    <string name="book_language">Book language</string>
    <string name="name">Name</string>
    <string name="authors">Authors:</string>
    <string name="language">Language</string>
    <string name="publisher">Publisher</string>
    <string name="chf">CHF</string>
    <string name="copyrights">Copyrights</string>
    <string name="rating">Rating</string>
    <string name="date_published">Date Published</string>
    <string name="format">format</string>
    <string name="should_appear_automatically">Should appear automatically</string>
    <string name="default_price_hint">0.00</string>
    <string name="published_on_the">Published on the</string>
    <string-array name="condition_options_array">
        <item>Select</item>
        <item>New</item>
        <item>Good</item>
        <item>Worn</item>
    </string-array>

    <!-- ====================================================================== -->

    <!--     Debug (move them when we do build variants) -->
    <string name="dummy_book_name">Dummy Book</string>
    <string name="dummy_price">0.000</string>
    <string name="maybe_navbar_here_if_yes_design_once_for_all_activities">Maybe navBar here ? If yes, design once for all activities</string>
    <string name="placeholder_title">The Eternities of Physics</string>
    <string name="placeholder_edition">1st Edition</string>
    <string name="your_picture_of_your_book_condition">Your picture of your book condition</string>
    <string name="image_of_the_sale">Image of the sale</string>
    <string name="etat">Etat</string>
    <string name="currency">CHF</string>
    <string name="value_buy">buy</string>
    <string name="value_in">in</string>

    <string name="sale_ordering_popularity">Popularity</string>
    <string name="sale_ordering_title_inc">Title (ascending)</string>
    <string name="sale_ordering_title_dec">Title (descending)</string>
    <string name="sale_ordering_price_inc">Price (ascending)</string>
    <string name="sale_ordering_price_dec">Price (descending)</string>
    <string name="sale_ordering_publish_date_inc">Publish date (ascending)</string>
    <string name="sale_ordering_publish_date_dec">Publish date (descending)</string>

    <string name="book_ordering_popularity">Popularity</string>
    <string name="book_ordering_title_inc">Title (ascending)</string>
    <string name="book_ordering_title_dec">Title (descending)</string>

    <string name="sale_state_active">Active</string>
    <string name="sale_state_retracted">Retracted</string>
    <string name="sale_state_concluded">Concluded</string>

    <string name="sale_book_condition_new">New</string>
    <string name="sale_book_condition_good">Good</string>
    <string name="sale_book_condition_worn">Worn</string>

    <string name="cs">Computer Science</string>
    <string name="bio">Biology</string>
    <string name="archi">Architecture</string>

    <string name="ic_ba1">IC-BA1</string>
    <string name="ma_ba2">MA-BA2</string>
    <string name="sv_ba3">SA-BA3</string>
    <string name="gc_ma1">GC-MA1</string>
    <string name="mt_ma2">MT-MA2</string>

    <string name="cs306">CS-306</string>
    <string name="com480">COM-480</string>

    <string name="textview">TextView</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_price">Internet price</string>
    <string name="image_description_favorite">Image of the favorite icon (star)</string>
    <string name="image_description_cart">Image of the cart icon (bag)</string>
    <string name="locate">locate</string>
    <string name="allow_user_to_locate_me">Allow user to locate me</string>
    <string name="seller">Seller:</string>
    <string name="seller_name">Seller_name</string>
</resources>